[package]
name = "pca9548a"
version = "0.1.0"
description = "PCA9548a I2C-Expander driver using embedded-hal"
authors = ["Michael Heinrichs <michael.spamacc@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["hal", "IO"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Phosfor/pca9548a"
edition = "2021"

[features]
std = []
hal_0_2 = ["embedded-hal-0-2"]
default = ["hal_0_2"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-0-2 = { optional = true, package = "embedded-hal", version = "0.2", features = [
    "unproven",
] }
